 * The last Encounter: Fix clan membership of PAotH

Themes:
 + New Sudden Death water texture for CrazyMission theme
 + Add dust flakes for Cheese and CrazyMission themes
 * Fix repeating sun in Hoggywood theme

Lua API:
 * Deprecation: Setting TurnTimeLeft/ReadyTimeLeft directly is deprecated and will become useless in future. Use the setter functions below
 + New call: SetTurnTimeLeft(newTurnTimeLeft): Set remaining turn time
 + New call: SetReadyTimeLeft(newReadyTimeLeft): Set remaining ready time
 + New call: Retreat(time [, respectGetAwayTimeFactor): Force current turn into retreating mode
 + New call: GetAmmoTimer(gearUid, ammoType): Returns current set timer for given ammoType and hog gear in ms. Returns nil for non-timerable ammo
 + New call: EnableSwitchHog(): Enable hog switching
 + New call: GetAmmo(ammoType): Returns ammo configuration (corresponds to SetAmmo)
 + New call: GetVampiric(): Returns true if vampirism is currently active
 + New call: GetLaserSight(): Returns true if laser sight (as utility) is currenctly active (ignoring sniper rifle)
 + New call: IsHogHidden(gear): Returns true if hog is hidden
 + Changed call: AddTeam: 2nd param. color: Accepts negative value to use a default clan color from player settings
 + Changed call: HedgewarsScriptLoad: 2nd param. mustExist. If false, it's allowed for the script to not exist
 + Changed call: HedgewarsScriptLoad: Return true on success and false on failure
 + Change callback: onGearResurrect: 2nd parameter for visual gear spawned at resurrect position (might be nil)
 + New parameter: SetAmmoTexts: 5th param. showExtra: Set to false to hide texts like “Not yet available”
 + New parameter: ShowMission: 6th param. forceDisplay: Set to true to prevent this particular mission panel to be hidden manually by player
 + Can set custom team rank: Call SendStat with 1st param siTeamRank and 2nd param to the desired rank, as string. Must be called before siPlayerKills of the team for which this applies