@@ -81,7 +81,7 @@
  amKnife-------------------------------------------------------------------------------|
  amRubber-------------------------------------------------------------------------------|
  amAirMine-------------------------------------------------------------------------------|
- amDuck-----------------------------------------------------------------------------------|
+ amCreeper--------------------------------------------------------------------------------|
  amMinigun---------------------------------------------------------------------------------|
 */
 #define AMMOLINE_DEFAULT_QT     "93919294221991210322351110012000000002111001010111110001000"
