@@ -125,7 +125,7 @@ const AmmoTests: array[TAmmoType] of TAmmoTest =
             (proc: nil;              flags: 0), // amKnife
             (proc: nil;              flags: 0), // amRubber
             (proc: nil;              flags: 0), // amAirMine
-            (proc: nil;              flags: 0), // amDuck
+            (proc: nil;              flags: 0), // amCreeper
             (proc: @TestShotgun;     flags: 0)  // amMinigun
             );
 
